kubernetes/ingress-object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: makanga-pothieux-frontend-rs
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: makanga-pothieux-backend-rs
            port:
              number: 5000
    host: calculatrice-makanga-pothieux.polytech-dijon.kiowy.net
